--- a/about.html
+++ b/about.html
@@ -625,8 +625,7 @@
                             </li>
                             <li>
                                 <i class="agrikon-icon-pin"></i>
-                                <a href="#">123 Nguyễn Huệ, Quận 1
-                                    TP. Hồ Chí Minh, Việt Nam</a>
+                                <a href="#">Thôn 5 Cát Lại, Xã Bình Lục, Tỉnh Ninh Bình, Việt Nam</a>
                             </li>
                         </ul><!-- /.list-unstyled -->
                     </div><!-- /.col-sm-12 col-md-6 col-lg-3 -->
