--- a/contact.html
+++ b/contact.html
@@ -198,7 +198,7 @@
                         <div class="col-sm-12 col-md-12 col-lg-4">
                             <div class="contact-infos__single">
                                 <h3>Thăm GREEN SUN HANAM</h3>
-                                <p>123 Nguyễn Huệ, Quận 1, TP. Hồ Chí Minh, Việt Nam.</p>
+                                <p>Thôn 5 Cát Lại, Xã Bình Lục, Tỉnh Ninh Bình, Việt Nam.</p>
                             </div><!-- /.contact-infos__single -->
                         </div><!-- /.col-sm-12 col-md-12 col-lg-4 -->
                         <div class="col-sm-12 col-md-12 col-lg-4">
@@ -289,8 +289,7 @@
                             </li>
                             <li>
                                 <i class="agrikon-icon-pin"></i>
-                                <a href="#">123 Nguyễn Huệ, Quận 1
-                                    TP. Hồ Chí Minh, Việt Nam</a>
+                                <a href="#">Thôn 5 Cát Lại, Xã Bình Lục, Tỉnh Ninh Bình, Việt Nam</a>
                             </li>
                         </ul><!-- /.list-unstyled -->
                     </div><!-- /.col-sm-12 col-md-6 col-lg-3 -->
