--- a/index.html
+++ b/index.html
@@ -56,17 +56,30 @@
                     </div><!-- /.topbar__right -->
                 </div><!-- /.container -->
             </div><!-- /.topbar -->
-            <nav class="main-menu" style="display: none;">
+            <nav class="main-menu">
                 <div class="container">
                     <div class="logo-box">
                         <a href="index.html" aria-label="logo image"><img src="assets/images/logo-dark.png" width="153" alt=""></a>
                         <span class="fa fa-bars mobile-nav__toggler"></span>
                     </div><!-- /.logo-box -->
-                    <ul class="main-menu__list" >
+                    <ul class="main-menu__list">
+                        <li class="dropdown">
+                            <a href="index.html">Trang Chủ</a>
+                        </li>
+                        <li>
+                            <a href="index.html">Giới Thiệu</a>
+                        </li>
+                        <li class="dropdown">
+                            <a href="index.html">Dự Án</a>
+                        </li>
+                        <li class="dropdown"><a href="index.html">Tin Tức</a>
+                        </li>
                     </ul>
                     <!-- /.main-menu__list -->
 
                     <div class="main-header__info">
+                        <a href="#" class="search-toggler main-header__search-btn"><i class="agrikon-icon-magnifying-glass"></i></a>
+                        <a class="main-header__cart-btn" href="#"><i class="agrikon-icon-shopping-cart"></i></a>
                         <a href="tel:0817796969" class="main-header__info-phone">
                             <i class="agrikon-icon-phone-call"></i>
                             <span class="main-header__info-phone-content">
@@ -350,8 +363,7 @@
                             </li>
                             <li>
                                 <i class="agrikon-icon-pin"></i>
-                                <a href="#">123 Nguyễn Huệ, Quận 1
-                                    TP. Hồ Chí Minh, Việt Nam</a>
+                                <a href="#">Thôn 5 Cát Lại, Xã Bình Lục, Tỉnh Ninh Bình, Việt Nam</a>
                             </li>
                         </ul><!-- /.list-unstyled -->
                     </div><!-- /.col-sm-12 col-md-6 col-lg-3 -->
